k8s/https/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoya-nodeport-service
  labels:
    app: hoya
spec:
  selector:
    app: hoya
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080  # 固定端口
  type: NodePort
